# AWS_lambda_com_python_e_serverless_framework

./: .gitignore  README.md  app.py  crear_bucket.py  pyproject.toml  s3_com_boto3_delete_object.py  s3_com_boto3_exclir_bucket_vazio.py
aws_lambda/utils/: alunos.csv
ec2/: curso-aws.pem  ec2_boto3_excluindo_instancias.py  ec2_boto3_parando_iniciando_instancias.py  p1_ec2_com_boto3_criando_instancia.py  p1e2_ec2_com_boto3_criando_instancia.py  wp_user_data.sh
projeto-02/: README.md  diagrama.py  handler.py  package-lock.json  serverless.yml  usuarios.csv
projeto-02/.serverless/: cloudformation-template-update-stack.json  serverless-state.json
projeto-03/: README.md  app.py  diagrama.py  handler.py  package-lock.json  pyproject.toml  serverless.yml
s3/: boto3_session_client_resource.py  s3_com_boto3_delete_object.py  s3_com_boto3_download_file.py
sls-demo/: package-lock.json  serverless.yml
